# USBCredProvider

./: CMakeLists.txt  Install.bat  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  Register.reg  Uninstall.bat  Unregister.reg  build.sh  compile_commands.json  mingw-toolchain.cmake  server_example.py
build-ide/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: USBCredProvider.def  USBCredential.cpp  USBCredential.h  USBCredentialProvider.cpp  USBCredentialProvider.h  common.h  config.cpp  config.h  dll.cpp  dll.h  guid.cpp  guid.h  helpers.cpp  helpers.h  resource.h  usb_detector.cpp  usb_detector.h
tools/: list_usb_devices.cpp
